# GTagger-experiments

./: .gitignore  GUIDE.md  REPRODUCE.md  aggregate_table.py  find_lr.py  pyproject.toml  todo.md
config/: toptagging.yaml
config/model/: tag_CGENNLGATrGraphGPS.yaml  tag_CGENNLGATrGraphTrans.yaml  tag_LorentzNetLGATrSlimGraphGPS.yaml  tag_LorentzNetLGATrSlimGraphTrans.yaml  tag_ParticleNetParTGraphGPS.yaml  tag_ParticleNetParTGraphTrans.yaml  tag_ParticleNetTransformer.yaml  tag_PlainGraphGPS.yaml  tag_PlainGraphTrans.yaml
config/training/: tag_default.yaml  top_CGENNLGATrGraphGPS.yaml  top_CGENNLGATrGraphTrans.yaml  top_LorentzNetLGATrSlimGraphGPS.yaml  top_LorentzNetLGATrSlimGraphTrans.yaml  top_ParticleNetParTGraphGPS.yaml  top_ParticleNetParTGraphTrans.yaml  top_PlainGraphGPS.yaml  top_PlainGraphTrans.yaml
config_quick/model/: tag_CGENNLGATrGraphGPS.yaml  tag_CGENNLGATrGraphTrans.yaml  tag_LorentzNetLGATrSlimGraphGPS.yaml  tag_LorentzNetLGATrSlimGraphTrans.yaml  tag_ParticleNetParTGraphGPS.yaml  tag_ParticleNetParTGraphTrans.yaml  tag_ParticleNetTransformer.yaml  tag_PlainGraphGPS.yaml  tag_PlainGraphTrans.yaml
data/: collect_data.py
docs/: SLURM.md
experiments/: base_experiment.py
experiments/baselines/: CGENNLGATrGraphTransHybrid  CGENNLGATrGraphTransHybrid.py  cgennlgatrgraphgps.py  lorentznetlgatrslimgraphgps.py  lorentznetlgatrslimgraphtrans.py  particlenetpartgraphgps.py  particlenettransformer.py  plaingraphgps.py  plaingraphtrans.py
experiments/tagging/: experiment.py  wrappers.py
tests/experiments/: test_tag_equivariance.py  test_tag_flops.py
(+1 files in other folders)
