[build-system]
requires = ["setuptools>=68", "wheel>=0.42"]
build-backend = "setuptools.build_meta"

[project]
name = "gtagger-experiments"
version = "1.1.0"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["experiments*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude=["experiments/baselines", "experiments/tagging/miniweaver"]
extend-exclude = ["data/", "runs/", "notebooks/"]

[tool.ruff.lint]
select = ["E","F","I","B","UP"]
ignore = [
    "E501", # no complaints from line length
    "B006", # allow mutable default function arguments
]
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
